--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,11 @@
 <h1>Homepage</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
 
-<%= @posts.inspect %>
 
+<h1>Skills</h1>
+<%= @skills.inspect %>
+
+<h1>Blogs</h1>
 <table>
   <thead>
     <tr>
