--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -6,4 +6,6 @@
     <p><%= p.body %></p>
     <p><%= p.title %></p>
     <%= image_tag p.thumb_image unless p.thumb_image.nil? %>
+    <p><%= link_to 'Delete Portfolio item', p, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
 <% end %>
