--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -4,11 +4,11 @@
 <%= link_to "Create New Item", new_portfolio_path %>
 
 <% @portfolio_items.each do |p| %>
-    <p><%= p.title %></p>
+    <p><%= link_to p.title, portfolio_path(p) %></p>
     <p><%= p.subtitle %></p>
     <p><%= p.body %></p>
     <p><%= p.title %></p>
     <%= image_tag p.thumb_image unless p.thumb_image.nil? %>
     <p><%= link_to 'Delete Portfolio item', p, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-    <%= link_to 'Edit', edit_portfolio_path(p.id) %>
+    <%= link_to 'Edit', edit_portfolio_path(p) %>
 <% end %>
