--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -9,6 +9,6 @@
     <p><%= p.body %></p>
     <p><%= p.title %></p>
     <%= image_tag p.thumb_image unless p.thumb_image.nil? %>
-    <p><%= link_to 'Delete Portfolio item', p, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <%= link_to 'Delete Portfolio item', p, method: :delete, data: { confirm: 'Are you sure?' } %>
     <%= link_to 'Edit', edit_portfolio_path(p) %>
 <% end %>
