--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -4,7 +4,7 @@
 <%= link_to "Create New Item", new_portfolio_path %>
 
 <% @portfolio_items.each do |p| %>
-    <p><%= link_to p.title, portfolio_path(p) %></p>
+    <p><%= link_to p.title, portfolio_show_path(p) %></p>
     <p><%= p.subtitle %></p>
     <p><%= p.body %></p>
     <p><%= p.title %></p>
