--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,14 @@
-<h1>Homepage <%= current_user.first_name if current_user %></h1>
+<h1>Hi,  <%= current_user.first_name %></h1>
 <p>Find me in app/views/pages/home.html.erb</p>
 
 
 <h1>Skills</h1>
 <%= @skills.inspect %>
 
+
+
 <h1>Blogs</h1>
+#<%= @posts.inspect %>
 <table>
   <thead>
     <tr>
